Add instructions on including openjfx modules